# VIEngine

./: .gitmodules  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/Assets/Editor/Scripts/: Core.wren  SceneView.wren  Test.wren
Editor/Assets/Editor/Shaders/: Debug.shader  Model.shader
Editor/include/Editor/: EditorScript.hpp  EditorWindow.hpp  ImGui.hpp  ImGuiImpl.hpp  Test.hpp
Editor/src/: main.cpp
Editor/src/Editor/: EditorScript.cpp  EditorWindow.cpp  ImGui.cpp  ImGuiImpl.cpp  Test.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/: Application.hpp  Assert.hpp  Audio.hpp  Configuration.hpp  Graphics.hpp  Level.hpp  Log.hpp  Math.hpp  Physics.hpp  Profiler.hpp  Resource.hpp  ResourceData.hpp  Script.hpp  Time.hpp  Type.hpp  Utils.hpp  Window.hpp
Engine/include/Engine/Data/: Model.hpp  Shader.hpp
Engine/include/Engine/Resources/: Model.hpp  Texture.hpp
Engine/src/Engine/: Application.cpp  Audio.cpp  Configuration.cpp  Graphics.cpp  Level.cpp  Log.cpp  Physics.cpp  Profiler.cpp  Resource.cpp  Script.cpp  Window.cpp
Engine/src/Engine/Backend/: Audio_Pa.cpp  Graphics_Gl.cpp  Physics_Box2d.cpp  Script_Wren.cpp  Window_Glfw.cpp
Engine/src/Engine/Data/: Model.cpp  Shader.cpp  Texture.cpp
Engine/src/Engine/Resources/: Model.cpp  Shader.cpp  Texture.cpp
